--- a/index.html
+++ b/index.html
@@ -1,1 +1,55 @@
-<!DOCTYPE html><html lang='fr'><head><meta charset='UTF-8'><title>DocGenie</title><link rel='stylesheet' href='style.css'></head><body><h1>Bienvenue sur DocGenie</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr" data-theme="dark">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DocGenie – Accueil</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<div id="loader"><div class="dot"></div></div>
+
+<nav>
+  <div class="logo">DocGenie</div>
+  <div class="nav-links">
+    <a href="index.html">Accueil</a>
+    <a href="modeles.html">Modèles</a>
+    <a href="generateur.html">Générateur</a>
+    <a href="contact.html">Contact</a>
+    <a href="a-propos.html">À propos</a>
+    <a href="docs.html">Exemples</a>
+    <a href="admin.html">Admin</a>
+    <button id="themeBtn">🌙</button>
+  </div>
+</nav>
+
+<main>
+  <section>
+    <h1>Bienvenue sur DocGenie</h1>
+    <p>Générez vos CV, lettres, attestations en quelques clics grâce à l’intelligence artificielle.</p>
+    <a href="generateur.html" class="btn-neon">Commencer</a>
+  </section>
+  <section>
+    <h2>Nos modèles</h2>
+    <div class="cards">
+      <div class="card">
+        <img src="https://cdn.pixabay.com/photo/2019/10/09/10/25/robot-4531125_960_720.jpg" alt="Robot 1" />
+        <h3>CV Professionnels</h3>
+      </div>
+      <div class="card">
+        <img src="https://cdn.pixabay.com/photo/2020/03/16/22/28/robot-4934711_960_720.jpg" alt="Robot 2" />
+        <h3>Lettres Motivées</h3>
+      </div>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 DocGenie – Créé avec ❤</p>
+</footer>
+
+<script src="app.js" type="module"></script>
+<script src="pdf.js" type="module"></script>
+</body>
+</html>
