--- a/modeles.html
+++ b/modeles.html
@@ -1,1 +1,46 @@
-<!DOCTYPE html><html lang='fr'><head><meta charset='UTF-8'><title>Modèles</title><link rel='stylesheet' href='style.css'></head><body><h1>Nos modèles</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr" data-theme="dark">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>DocGenie – Modèles</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<nav>
+  <div class="logo">DocGenie</div>
+  <div class="nav-links">
+    <a href="index.html">Accueil</a>
+    <a href="modeles.html" class="active">Modèles</a>
+    <a href="generateur.html">Générateur</a>
+    <a href="contact.html">Contact</a>
+    <a href="a-propos.html">À propos</a>
+    <a href="docs.html">Exemples</a>
+    <a href="admin.html">Admin</a>
+    <button id="themeBtn">🌙</button>
+  </div>
+</nav>
+
+<main>
+  <section>
+    <h1>Modèles de documents disponibles</h1>
+    <ul>
+      <li><strong>CV Professionnel</strong> — Modèle élégant et moderne.</li>
+      <li><strong>Lettre de motivation</strong> — Adaptée à tous secteurs.</li>
+      <li><strong>Attestation</strong> — Facile à personnaliser.</li>
+      <li><strong>Contrat de travail</strong> — Format standard légal.</li>
+      <li><strong>Autres documents</strong> — Sur demande.</li>
+    </ul>
+    <a href="generateur.html" class="btn-neon">Utiliser un modèle</a>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 DocGenie – Créé avec ❤</p>
+</footer>
+
+<script src="app.js" type="module"></script>
+<script src="pdf.js" type="module"></script>
+</body>
+</html>
