--- a/a-propos.html
+++ b/a-propos.html
@@ -1,1 +1,42 @@
-<!DOCTYPE html><html lang='fr'><head><meta charset='UTF-8'><title>À propos</title><link rel='stylesheet' href='style.css'></head><body><h1>À propos de DocGenie</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr" data-theme="dark">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DocGenie – À propos</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<nav>
+  <div class="logo">DocGenie</div>
+  <div class="nav-links">
+    <a href="index.html">Accueil</a>
+    <a href="modeles.html">Modèles</a>
+    <a href="generateur.html">Générateur</a>
+    <a href="contact.html">Contact</a>
+    <a href="a-propos.html" class="active">À propos</a>
+    <a href="docs.html">Exemples</a>
+    <a href="admin.html">Admin</a>
+    <button id="themeBtn">🌙</button>
+  </div>
+</nav>
+
+<main>
+  <section>
+    <h1>À propos de DocGenie</h1>
+    <p>DocGenie est un projet innovant dédié à la génération automatisée de documents professionnels et personnels, en utilisant des technologies modernes et une interface simple et élégante.</p>
+    <p>Notre objectif est de faciliter la vie des utilisateurs en proposant des modèles personnalisables et des outils intelligents pour créer rapidement des CV, lettres, contrats, attestations, et bien plus encore.</p>
+    <h2>L’équipe</h2>
+    <p>Une petite équipe passionnée d’IA, design et développement web, engagée à créer des outils accessibles et performants.</p>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 DocGenie – Créé avec ❤</p>
+</footer>
+
+<script src="app.js" type="module"></script>
+
+</body>
+</html>
