--- a/docs.html
+++ b/docs.html
@@ -1,1 +1,56 @@
-<!DOCTYPE html><html lang='fr'><head><meta charset='UTF-8'><title>Docs</title><link rel='stylesheet' href='style.css'></head><body><h1>Exemples de documents</h1></body></html>
+<!DOCTYPE html>
+<html lang="fr" data-theme="dark">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DocGenie – Exemples de documents</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+<nav>
+  <div class="logo">DocGenie</div>
+  <div class="nav-links">
+    <a href="index.html">Accueil</a>
+    <a href="modeles.html">Modèles</a>
+    <a href="generateur.html">Générateur</a>
+    <a href="contact.html">Contact</a>
+    <a href="a-propos.html">À propos</a>
+    <a href="docs.html" class="active">Exemples</a>
+    <a href="admin.html">Admin</a>
+    <button id="themeBtn">🌙</button>
+  </div>
+</nav>
+
+<main>
+  <section>
+    <h1>Exemples de documents générés</h1>
+    <div class="docs-gallery">
+      <article>
+        <h3>CV Exemple</h3>
+        <a href="docs/cv-example.pdf" target="_blank" rel="noopener noreferrer">Voir le PDF</a>
+      </article>
+      <article>
+        <h3>Lettre de motivation Exemple</h3>
+        <a href="docs/lettre-exemple.pdf" target="_blank" rel="noopener noreferrer">Voir le PDF</a>
+      </article>
+      <article>
+        <h3>Attestation Exemple</h3>
+        <a href="docs/attestation-exemple.pdf" target="_blank" rel="noopener noreferrer">Voir le PDF</a>
+      </article>
+      <article>
+        <h3>Contrat Exemple</h3>
+        <a href="docs/contrat-exemple.pdf" target="_blank" rel="noopener noreferrer">Voir le PDF</a>
+      </article>
+    </div>
+  </section>
+</main>
+
+<footer>
+  <p>© 2025 DocGenie – Créé avec ❤</p>
+</footer>
+
+<script src="app.js" type="module"></script>
+
+</body>
+</html>
