--- a/index.html
+++ b/index.html
@@ -2,54 +2,52 @@
 <html lang="fr" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DocGenie – Accueil</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>DocGenie - Générateur de Documents</title>
   <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="img/favicon.png" />
 </head>
 <body>
+  <header>
+    <nav class="navbar">
+      <a href="index.html" class="logo">DocGenie</a>
+      <ul class="nav-links">
+        <li><a class="active" href="index.html">Accueil</a></li>
+        <li><a href="modeles.html">Modèles</a></li>
+        <li><a href="generateur.html">Générateur</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="a-propos.html">À propos</a></li>
+      </ul>
+      <button id="themeBtn">🌙</button>
+    </nav>
+  </header>
 
-<div id="loader"><div class="dot"></div></div>
+  <main class="page-content">
+    <section class="intro-section">
+      <h1>🧠 Bienvenue sur DocGenie</h1>
+      <p>Votre assistant intelligent pour créer des CV, lettres, contrats, attestations... en quelques clics !</p>
+      <a href="generateur.html" class="cta-button">Commencer &rarr;</a>
+    </section>
 
-<nav>
-  <div class="logo">DocGenie</div>
-  <div class="nav-links">
-    <a href="index.html">Accueil</a>
-    <a href="modeles.html">Modèles</a>
-    <a href="generateur.html">Générateur</a>
-    <a href="contact.html">Contact</a>
-    <a href="a-propos.html">À propos</a>
-    <a href="docs.html">Exemples</a>
-    <a href="admin.html">Admin</a>
-    <button id="themeBtn">🌙</button>
-  </div>
-</nav>
+    <section class="cards-container">
+      <a href="modeles.html" class="doc-card">
+        <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?auto=format&fit=crop&w=600&q=80" alt="Modèles disponibles" />
+        <h3>Nos Modèles</h3>
+        <p>Parcourez nos modèles pour trouver celui qui vous correspond.</p>
+      </a>
 
-<main>
-  <section>
-    <h1>Bienvenue sur DocGenie</h1>
-    <p>Générez vos CV, lettres, attestations en quelques clics grâce à l’intelligence artificielle.</p>
-    <a href="generateur.html" class="btn-neon">Commencer</a>
-  </section>
-  <section>
-    <h2>Nos modèles</h2>
-    <div class="cards">
-      <div class="card">
-        <img src="https://cdn.pixabay.com/photo/2019/10/09/10/25/robot-4531125_960_720.jpg" alt="Robot 1" />
-        <h3>CV Professionnels</h3>
-      </div>
-      <div class="card">
-        <img src="https://cdn.pixabay.com/photo/2020/03/16/22/28/robot-4934711_960_720.jpg" alt="Robot 2" />
-        <h3>Lettres Motivées</h3>
-      </div>
-    </div>
-  </section>
-</main>
+      <a href="generateur.html" class="doc-card">
+        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=600&q=80" alt="Générateur IA" />
+        <h3>Générateur IA</h3>
+        <p>Remplissez un formulaire, obtenez un document prêt à l'emploi + PDF.</p>
+      </a>
+    </section>
+  </main>
 
-<footer>
-  <p>© 2025 DocGenie – Créé avec ❤</p>
-</footer>
+  <footer class="footer">
+    <p>&copy; 2025 DocGenie. Tous droits réservés.</p>
+  </footer>
 
-<script src="app.js" type="module"></script>
-<script src="pdf.js" type="module"></script>
+  <script src="app.js"></script>
 </body>
 </html>
