--- a/index.html
+++ b/index.html
@@ -4,25 +4,170 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>DocGenie - Générateur de Documents</title>
-  <link rel="stylesheet" href="style.css" />
-  <link rel="icon" href="img/favicon.png" />
+  <style>
+    :root {
+      --primary: #7f5af0;
+      --secondary: #2cb67d;
+      --background-dark: #0f0e17;
+      --text-light: #fefefe;
+      --card-bg: rgba(255 255 255 / 0.05);
+    }
+    [data-theme="dark"] {
+      background: var(--background-dark);
+      color: var(--text-light);
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      margin: 0; padding: 0;
+    }
+    body, html {
+      height: 100%;
+      margin: 0;
+    }
+    header {
+      position: sticky;
+      top: 0;
+      background: rgba(15,14,23,0.8);
+      backdrop-filter: blur(10px);
+      padding: 1rem 2rem;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      z-index: 999;
+    }
+    .logo {
+      font-weight: 900;
+      font-size: 1.8rem;
+      color: var(--primary);
+      text-decoration: none;
+    }
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.3rem;
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li a {
+      color: var(--text-light);
+      text-decoration: none;
+      font-weight: 600;
+      padding: 0.3rem 0.6rem;
+      border-radius: 8px;
+      transition: background-color 0.3s ease;
+    }
+    nav ul li a:hover,
+    nav ul li a.active {
+      background-color: var(--primary);
+      color: white;
+    }
+    main {
+      padding: 2rem;
+      max-width: 1100px;
+      margin: auto;
+    }
+    .intro-section {
+      text-align: center;
+      margin-bottom: 3rem;
+    }
+    .intro-section h1 {
+      font-size: 2.8rem;
+      margin-bottom: 0.6rem;
+      color: var(--primary);
+    }
+    .intro-section p {
+      font-size: 1.2rem;
+      max-width: 700px;
+      margin: 0 auto 1.5rem auto;
+      line-height: 1.5;
+    }
+    .cta-button {
+      background: var(--primary);
+      color: white;
+      padding: 0.9rem 2rem;
+      font-size: 1.2rem;
+      border-radius: 30px;
+      text-decoration: none;
+      font-weight: 700;
+      box-shadow: 0 0 15px var(--primary);
+      transition: background-color 0.3s ease;
+      display: inline-block;
+    }
+    .cta-button:hover {
+      background: #986efc;
+      box-shadow: 0 0 25px #986efc;
+    }
+    .cards-container {
+      display: grid;
+      grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
+      gap: 2rem;
+    }
+    a.doc-card {
+      display: block;
+      background: var(--card-bg);
+      border-radius: 15px;
+      padding: 1rem;
+      color: var(--text-light);
+      text-decoration: none;
+      box-shadow: 0 0 15px rgba(127,90,240,0.3);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+      cursor: pointer;
+      backdrop-filter: blur(8px);
+    }
+    a.doc-card:hover {
+      transform: translateY(-6px);
+      box-shadow: 0 0 30px rgba(127,90,240,0.7);
+    }
+    a.doc-card img {
+      width: 100%;
+      height: 180px;
+      object-fit: cover;
+      border-radius: 10px;
+      margin-bottom: 1rem;
+      user-select: none;
+      pointer-events: none;
+    }
+    a.doc-card h3 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1.4rem;
+      color: var(--secondary);
+    }
+    a.doc-card p {
+      font-size: 1rem;
+      line-height: 1.3;
+    }
+    footer.footer {
+      text-align: center;
+      padding: 1.5rem;
+      background: rgba(15,14,23,0.8);
+      color: var(--text-light);
+      margin-top: 4rem;
+      user-select: none;
+    }
+    @media (max-width: 600px) {
+      .intro-section h1 {
+        font-size: 2rem;
+      }
+      .cards-container {
+        grid-template-columns: 1fr;
+      }
+    }
+  </style>
 </head>
-<body>
+<body data-theme="dark">
+
   <header>
-    <nav class="navbar">
-      <a href="index.html" class="logo">DocGenie</a>
-      <ul class="nav-links">
+    <a href="index.html" class="logo">DocGenie</a>
+    <nav>
+      <ul>
         <li><a class="active" href="index.html">Accueil</a></li>
         <li><a href="modeles.html">Modèles</a></li>
         <li><a href="generateur.html">Générateur</a></li>
         <li><a href="contact.html">Contact</a></li>
         <li><a href="a-propos.html">À propos</a></li>
       </ul>
-      <button id="themeBtn">🌙</button>
     </nav>
   </header>
 
-  <main class="page-content">
+  <main>
     <section class="intro-section">
       <h1>🧠 Bienvenue sur DocGenie</h1>
       <p>Votre assistant intelligent pour créer des CV, lettres, contrats, attestations... en quelques clics !</p>
@@ -31,13 +176,13 @@
 
     <section class="cards-container">
       <a href="modeles.html" class="doc-card">
-        <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?auto=format&fit=crop&w=600&q=80" alt="Modèles disponibles" />
+        <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?auto=format&fit=crop&w=600&q=80" alt="Robot Modèles" />
         <h3>Nos Modèles</h3>
         <p>Parcourez nos modèles pour trouver celui qui vous correspond.</p>
       </a>
 
       <a href="generateur.html" class="doc-card">
-        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=600&q=80" alt="Générateur IA" />
+        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=600&q=80" alt="Robot Générateur" />
         <h3>Générateur IA</h3>
         <p>Remplissez un formulaire, obtenez un document prêt à l'emploi + PDF.</p>
       </a>
@@ -48,6 +193,5 @@
     <p>&copy; 2025 DocGenie. Tous droits réservés.</p>
   </footer>
 
-  <script src="app.js"></script>
 </body>
 </html>
