--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@
     </section>
 
     <section class="cards-container">
-      <a href="modeles.html" class="doc-card">
-        <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?auto=format&fit=crop&w=600&q=80" alt="Modèles disponibles" />
+      <div class="doc-card" onclick="location.href='modeles.html';">
+        <img src="https://cdn.pixabay.com/photo/2023/01/30/11/19/robot-7754457_960_720.jpg" alt="Modèles disponibles">
         <h3>Nos Modèles</h3>
         <p>Parcourez nos modèles pour trouver celui qui vous correspond.</p>
-      </a>
+      </div>
 
-      <a href="generateur.html" class="doc-card">
-        <img src="https://images.unsplash.com/photo-1549924231-f129b911e442?auto=format&fit=crop&w=600&q=80" alt="Générateur IA" />
+      <div class="doc-card" onclick="location.href='generateur.html';">
+        <img src="https://cdn.pixabay.com/photo/2020/06/04/06/59/robot-5257705_960_720.jpg" alt="Générateur IA">
         <h3>Générateur IA</h3>
         <p>Remplissez un formulaire, obtenez un document prêt à l'emploi + PDF.</p>
-      </a>
+      </div>
     </section>
   </main>
 
